vlib/v/checker/tests/selector_expr_assign.out
vlib/v/checker/tests/selector_expr_assign.vv:7:8: error: use assignment `=` instead of declaration `:=` when modifying struct fields
    5 | fn main() {
    6 |     abc := Abc{}
    7 |     abc.a := 2
      |           ~~
    8 | }
