vlib/v/checker/tests/selector_expr_assign.vv
struct Abc {
	a int
}

fn main() {
	abc := Abc{}
	abc.a := 2
}
